[package]
name = "pico"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4"
pixels = "0.15"
winit = "0.29"
winit_input_helper = "0.16"
error-iter = "0.4"
cpal = "0.16.0"
sdl2 = { version = "0.38.0", features = ["bundled"] }
